# controller/struct.go
@@ -33,7 +33,7 @@ type ReqAyam struct {
 
 type ReqOrder struct {
 	Ayam 	          Ayam               `bson:"ayam,omitempty" json:"ayam,omitempty"`
-	Nama_Pemesan 	  string 			 `bson:"nama_pemesan,omitempty" json:"nama_pemesan,omitempty"`
-	Alamat 			  string 			 `bson:"alamat,omitempty" json:"alamat,omitempty"`
-	Tanggal_Pemesanan primitive.DateTime `bson:"tanggal_pemesanan,omitempty" json:"tanggal_pemesanan,omitempty"`
+	Nama_Pemesan 	  string 			 `bson:"nama_pemesan,omitempty" json:"nama_pemesan,omitempty" example:"Dimas"`
+	Alamat 			  string 			 `bson:"alamat,omitempty" json:"alamat,omitempty" example:"Bandung"`
+	Tanggal_Pemesanan primitive.DateTime `bson:"tanggal_pemesanan,omitempty" json:"tanggal_pemesanan,omitempty" swaggertype:"string" example:"17/08/1945"`
 }
